{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "24e5c5f0-2615-4175-a863-1f9690003581",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "PassThrough",
                    "id": "e63dddeb-313b-4f5c-a72b-7408fa1aefe3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "ab5c48b5-f58e-4b4c-acb0-8f0b52a7af69",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "3b68e1d5-d473-4292-b6c1-6ec4e8230220",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e96408c2-14d8-4ec8-a244-289a919c6d92",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9a293a8f-7b17-41d0-9911-d7c8fff11738",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "297aae90-c5cb-4e73-916a-e14c0ad4b6bb",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}